# databricks_citbike_CI-CD

./: .coverage  .gitignore  README.md  coveragerc  databricks.yml  pyproject.toml  setup.py
.github/workflows/: cd-workflow.yml  ci-workflow.yml
citibike_etl/notebooks/01_bronze/: 01_bronze_citibike.ipynb
citibike_etl/notebooks/02_silver/: 02_silver_citibike.ipynb
citibike_etl/scripts/02_silver/: 02_silver_citibike.py
notebooks/: notebook_1.ipynb  notebook_2.ipynb
resources/: citibike-etl_pipeline.dlt.yml  citibike_etl_pipeline_nb.job.yml  citibike_etl_pipeline_py.job.yml  cluster.yml
scripts/: temp.py
tests/: conftest.py  test_citibike_utils.py  test_datetime_utils.py  test_demo.py
utils/: spark_reporting.py
